src/objects/Project__c.object
<CustomObject>
    <description>RWN Project</description>
    <fields>
        <fullName>Annual_Revenue__c</fullName>
        <label>Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Awarded_Not_Awarded_Date__c</fullName>
        <label>Awarded/Not Awarded Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <formula>IF(Total_Items__c&gt;0, ROUND( Total_Items_Completed__c /Total_Items__c,2), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>% Complete</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Director__c</fullName>
        <label>Executive Director</label>
        <picklist>
            <picklistValues>
                <fullName>Brenda Niess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connie Menne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lisa Pakkebier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nita Hayes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pat Masyga</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shelley Hansen-Blake</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yemonja Smalls</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HeaderTxt__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HeaderTxt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incomplete_Tasks__c</fullName>
        <label>Incomplete Tasks</label>
        <summarizedField>Project_Task__c.Incomplete__c</summarizedField>
        <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Interested_Parties_email_address__c</fullName>
        <label>Interested Parties e-mail address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operating_Group__c</fullName>
        <label>Operating Group</label>
        <picklist>
            <picklistValues>
                <fullName>Cambridge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CareMeridian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NeuroRestorative</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Redwood</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Progress__c</fullName>
        <formula>IF( Total_Tasks__c&gt;0,IMAGE(&quot;https://c.$Setup.SystemSettings__c.iServeProdInstance__c.content.force.com/servlet/servlet.ImageServer?id=015U00000002LpJ&amp;oid=00DJ0000002lsfT&amp;lastMod=1334720899000&quot;, &quot;P&quot;, 7, Complete__c *125) 
&amp; 
IMAGE(&quot;https://c.$Setup.SystemSettings__c.iServeProdInstance__c.content.force.com/servlet/servlet.ImageServer?id=015U00000002LpI&amp;oid=00DJ0000002lsfT&amp;lastMod=1334721035000&quot;, &quot;P&quot;, 7, 125-(Complete__c *125))
&amp;
&quot; &quot;
&amp;
TEXT(Complete__c*100) 
&amp; 
&quot;% &quot;
,
&quot;no tasks have been created for this project&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Owner__c</fullName>
        <label>Project Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <label>Regional Director</label>
        <picklist>
            <picklistValues>
                <fullName>Bethany McKeon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chris Bonnema</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chrissy Tauber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dawn Steffen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karina Schmitz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kelly Flanagan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lisa Olson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lisa Thelen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lori Larson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lori Wirtzfeld</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lori Wright</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mary Braun-Kapsner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mary Stuber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melissa Klatt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pat Costigan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peg Dallman</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sara Drish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scott Rodwell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stephanie Kalbach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teresa Rhodes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reminder__c</fullName>
        <inlineHelpText>Numbers of days before the due to get a reminder</inlineHelpText>
        <label>Project Due Date Reminder</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Line__c</fullName>
        <label>Service Line</label>
        <picklist>
            <picklistValues>
                <fullName>ABI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ND</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Awarded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_Activities_Completed__c</fullName>
        <label>Total Activities Completed</label>
        <summarizedField>Project_Task__c.Total_Activities_Completed__c</summarizedField>
        <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Activities__c</fullName>
        <label>Total Activities</label>
        <summarizedField>Project_Task__c.Total_Activities__c</summarizedField>
        <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Items_Completed__c</fullName>
        <formula>Total_Activities_Completed__c +  Total_Task_Completed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Items Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Items__c</fullName>
        <formula>Total_Activities__c +  Total_Tasks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Items</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Per_Complete__c</fullName>
        <label>Total % Complete</label>
        <summarizedField>Project_Task__c.Complete__c</summarizedField>
        <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Task_Completed__c</fullName>
        <label>Total Task Completed</label>
        <summaryFilterItems>
            <field>Project_Task__c.Complete__c</field>
            <operation>equals</operation>
            <value>100</value>
        </summaryFilterItems>
        <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Tasks__c</fullName>
        <label>Total Tasks</label>
        <summaryForeignKey>Project_Task__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>isTemplate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTemplate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sysReminder__c</fullName>
        <defaultValue>&quot;*&quot;</defaultValue>
        <label>Project Due Date Reminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zzDateChatterReminder__c</fullName>
        <formula>Due_Date__c - Reminder__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zzDateChatterReminder</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zztest__c</fullName>
        <formula>IF( zzDateChatterReminder__c = TODAY(),&quot;True&quot;,&quot;False&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>zztest</label>
        <type>Text</type>
    </fields>
    <label>Project</label>
    <listViews>
        <fullName>ADH_ACTIVE_Projects</fullName>
        <columns>NAME</columns>
        <columns>Progress__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Total_Activities__c</columns>
        <columns>Total_Tasks__c</columns>
        <columns>Total_Items_Completed__c</columns>
        <columns>Total_Per_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.ADH_Adult_Day_Health</value>
        </filters>
        <filters>
            <field>isTemplate__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>ADH ACTIVE Projects</label>
        <sharedTo>
            <group>Projects_ADH</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Progress__c</columns>
        <columns>Complete__c</columns>
        <columns>Total_Per_Complete__c</columns>
        <columns>Total_Items__c</columns>
        <columns>Total_Items_Completed__c</columns>
        <columns>Total_Tasks__c</columns>
        <columns>Total_Task_Completed__c</columns>
        <columns>Incomplete_Tasks__c</columns>
        <columns>Total_Activities__c</columns>
        <columns>Total_Activities_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CareMeridian_ACTIVE_Projects</fullName>
        <columns>NAME</columns>
        <columns>Progress__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Total_Activities__c</columns>
        <columns>Total_Tasks__c</columns>
        <columns>Total_Items_Completed__c</columns>
        <columns>Total_Per_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.CareMeridian</value>
        </filters>
        <filters>
            <field>isTemplate__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>CareMeridian ACTIVE Projects</label>
        <sharedTo>
            <group>Projects_CM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Growth_Goals</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Progress__c</columns>
        <columns>Regional_Director__c</columns>
        <columns>Executive_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Growth_Goal</value>
        </filters>
        <label>Growth Goals</label>
    </listViews>
    <listViews>
        <fullName>Hastings_ACTIVE_Projects</fullName>
        <columns>NAME</columns>
        <columns>Progress__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Total_Activities__c</columns>
        <columns>Total_Tasks__c</columns>
        <columns>Total_Items_Completed__c</columns>
        <columns>Total_Per_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Cambridge</value>
        </filters>
        <filters>
            <field>isTemplate__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Hastings ACTIVE Projects</label>
        <sharedTo>
            <group>Projects_CAM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NeuroRestorative_ACTIVE_Projects</fullName>
        <columns>NAME</columns>
        <columns>Progress__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Total_Activities__c</columns>
        <columns>Total_Tasks__c</columns>
        <columns>Total_Items__c</columns>
        <columns>Total_Items_Completed__c</columns>
        <columns>Total_Per_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Neuro_Restorative</value>
        </filters>
        <filters>
            <field>isTemplate__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>NeuroRestorative ACTIVE Projects</label>
    </listViews>
    <listViews>
        <fullName>NeuroRestorative_TEMPLATES</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Total_Activities__c</columns>
        <columns>Total_Tasks__c</columns>
        <columns>Total_Items__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Neuro_Restorative</value>
        </filters>
        <filters>
            <field>isTemplate__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>NeuroRestorative TEMPLATES</label>
    </listViews>
    <listViews>
        <fullName>Others</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Progress__c</columns>
        <columns>Regional_Director__c</columns>
        <columns>Executive_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Other</value>
        </filters>
        <label>Others</label>
    </listViews>
    <listViews>
        <fullName>RFP</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Progress__c</columns>
        <columns>Regional_Director__c</columns>
        <columns>Executive_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.RFP</value>
        </filters>
        <label>RFP</label>
    </listViews>
    <listViews>
        <fullName>Redwood_Finance_ACTIVE_Projects</fullName>
        <columns>NAME</columns>
        <columns>Progress__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Total_Activities__c</columns>
        <columns>Total_Tasks__c</columns>
        <columns>Total_Items_Completed__c</columns>
        <columns>Total_Per_Complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Redwood</value>
        </filters>
        <filters>
            <field>isTemplate__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Redwood Finance ACTIVE Projects</label>
        <sharedTo>
            <group>Projects_RW</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Training</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Progress__c</columns>
        <columns>Regional_Director__c</columns>
        <columns>Executive_Director__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Project__c.Training</value>
        </filters>
        <label>Training</label>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects</pluralLabel>
    <recordTypes>
        <fullName>ADH_Adult_Day_Health</fullName>
        <active>true</active>
        <label>ADH (Adult Day Health)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Admin_Charter</fullName>
        <active>true</active>
        <label>Admin Charter</label>
    </recordTypes>
    <recordTypes>
        <fullName>Cambridge</fullName>
        <active>true</active>
        <label>Cambridge</label>
    </recordTypes>
    <recordTypes>
        <fullName>CareMeridian</fullName>
        <active>true</active>
        <label>CareMeridian</label>
    </recordTypes>
    <recordTypes>
        <fullName>Growth_Goal</fullName>
        <active>true</active>
        <label>Growth Goal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Neuro_Restorative</fullName>
        <active>true</active>
        <label>Neuro Restorative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <label>Other</label>
    </recordTypes>
    <recordTypes>
        <fullName>RFP</fullName>
        <active>true</active>
        <label>RFP</label>
    </recordTypes>
    <recordTypes>
        <fullName>Redwood</fullName>
        <active>true</active>
        <label>Redwood</label>
    </recordTypes>
    <recordTypes>
        <fullName>Training</fullName>
        <active>true</active>
        <label>Training</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Status</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISBLANK(TEXT(Status__c)),True,False)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Status is required</errorMessage>
    </validationRules>
</CustomObject>